--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">My Places</string>
     <string name="accion_mostrar">Show places</string>
     <string name="accion_preferencias">Preferences</string>
     <string name="accion_acerca_de">About</string>
@@ -23,4 +23,14 @@
     <string name="acerca_de_main">about</string>
     <string name="salir_main">Quit</string>
     <string name="tituloAplicacion">My Application</string>
+    <string name ="acerca_de">
+        Bajo ese almendro florido,\n
+        todo cargado de flor\n
+        recordé, yo he maldecido\n
+        mi juventud sin amor\n\n
+        Hoy, en mitad de la vida,\n
+        me he parado a meditar\n
+        ¡Juventud nunca vivida\n
+        quién te volviera a soñar!\n
+    </string>
 </resources>
